# raoc-trends

./: README.md  chatGptSummary.md  claudeSummary.md  cursorSummary.md  plan.md
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  analytics.py  config.py  db.py  embeddings.py  generation.py  ingest.py  llm.py  main.py  models.py  rag.py  reddit_client.py  schemas.py
backend/app/routers/: analysis.py  ingest.py
backend/scripts/: ingest_cron.sh  install_cron.sh  uninstall_cron.sh
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  hooks.ts  index.css
frontend/src/components/: ABComparison.tsx  EmbeddingScatter.tsx  IngestControl.tsx  Panel.tsx  RetrievalStats.tsx  TrendsPanel.tsx
