[project]
name = "raoc-trends-backend"
version = "0.1.0"
description = "Backend for the r/RandomActsofCards Community Voices app (ingestion, RAG, A/B generation, analytics API)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    # Data ingestion via the Arctic Shift archive API (no Reddit auth needed).
    "requests>=2.32.0",
    # torch dropped Intel-mac (x86_64) wheels after 2.2.x; pin to the last
    # version that ships macOS x86_64 wheels so this runs on Intel Macs.
    "torch>=2.2.0,<2.3.0",
    # transformers 5.x requires a newer torch than 2.2.x and disables its torch
    # integration otherwise (NameError: name 'nn'). Pin to the 4.x line that
    # supports torch 2.2, and a matching sentence-transformers 3.x.
    "transformers>=4.41.0,<5",
    "sentence-transformers>=3.0.0,<4",
    "accelerate>=0.30.0,<1.1",
    "google-genai>=0.3.0",
    "scikit-learn>=1.5.0",
    # torch 2.2.x is built against numpy 1.x; numpy 2 breaks the ABI.
    "numpy>=1.26.0,<2",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
